@@ -6,6 +6,10 @@ Changes
   KeyLocator and ForwardingFlags, plus the internal ForwardingEntry and
   ControlParameters.
 * In Name, support slice notation to call getSubName, e.g. name[2:4].
+* In MetaInfo, added get/setFinalBlockId (replaces the deprecated get/setFinalBlockID).
+
+Deprecated
+* In MetaInfo, deprecated get/setFinalBlockID. Use get/setFinalBlockId.
 
 PyNDN v2.0beta1 (2014-08-31)
 ----------------------------
